# jrpce

./: README.md  package-lock.json  package.json
public/icons/: template.psd
src/: App.css  App.tsx  Config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  fs.json
src-tauri/src/: allowed_processes.json  discord_rpc.rs  main.rs  windows_api.rs
src/components/: Profile.tsx
